# quantum_keymap

./: .gitignore  LICENSE  README.md  pyproject.toml
quantum_keymap/: __main__.py  logger.py  model.py  util.py
quantum_keymap/config/: default.py
text/: alice.txt
