[tool.poetry]
name = "quantum_keymap"
version = "0.1.0"
description = "keymap generator using quantum annealing"
authors = ["aoirohn <aoiro.hn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.0"
pandas = "^1.0.5"
openjij = "^0.0.11"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
